# research-pr-production

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  release.sh  renovate.json  requirements.txt
docs/poster/: SUtheme.sty  UPRMtheme.sty  main.tex  refs.bib
docs/poster/blocks/: conclutions.tex  data.tex  intro.tex  introduction.tex  model.tex  objective.tex  references.tex  results.tex  results2.tex  resumen.tex
notebooks/: capital.ipynb  capital_walks.ipynb  describe.ipynb  energy_data.ipynb  main_reg.ipynb
src/prprod_repl/: __init__.py  utils.py
