[project]
name = "prprod_repl"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
    "jp-imports>=1.1.0",
    "jp-qcew>=3.2.1",
]

[project.scripts]
research-pr-production = "prprod_repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
