[project]
name = "prprod_repl"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
    "arviz-plots[matplotlib,plotly]>=1.1.0",
    "bambi>=0.16.0",
    "censusforge>=0.7.0",
    "geopandas>=1.1.3",
    "jp-imports>=1.2.0",
    "jp-qcew>=3.2.1",
    "pymc>=5.28.5",
    "thefuzz>=0.22.1",
]

[project.scripts]
research-pr-production = "prprod_repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.19.2",
    "pynvim>=0.6.0",
]
